# Test-bugbot

./: README.md  app.py  pyproject.toml  requirements.txt  test  test.php
.cursor/skills/code-review/: SKILL.md
docs/: BUGBOT_DEMO.md  DEMO_SCRIPT.md  TEST_PLAN.md
langgraph_demo/: __init__.py  cli.py
langgraph_demo/src/: __init__.py  graph.py  nodes.py  state.py
tests/: __init__.py  test_graph.py  test_nodes.py
